--- a/Styling/aboutMeandContact.css
+++ b/Styling/aboutMeandContact.css
@@ -1,26 +1,83 @@
 .contentBlock{
-  background-color: rgb(246, 249, 250);
-  border: solid 1px rgba(14, 24, 69, 0.55);
-  border-radius: 5px;
   padding: 10px;
   text-align: justify;
-  color: rgba(13, 17, 33, 0.99);
+  color: darkslategrey;
+  margin-top:30px;
 }
 
-.call-meh{
-  color: blue;
+.contentInsta{
+  width: 50vw;
+  height: 50vw;
+  max-width:450px;
+  max-height:450px;
 }
 
-.class{
-  padding-top:5px;
-  padding-bottom:5px;
-}
-.caption{
-  font-style: italic;
-  color: rgb(236, 122, 86);
+.insta{
+  max-height:71%;  
 }
 
 .contact-deets{
-  padding-top:10px;
   font-size:22px;
+}
+
+.contact-deets-xs{
+  color: whitesmoke;
+  font-size:18px
+}
+.imgOriginal{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  display: block;
+  top: 0;
+ transition: .5s ease;
+ filter: brightness(0.7);
+}
+
+.imgMeraqiLogo{
+  width:70%;
+  height: auto;
+  position: absolute;
+  left: 15%;
+  top: 35%;
+}
+
+
+.imgP85Logo{
+  width:70%;
+  height: auto;
+  position: absolute;
+  left: 18%;
+  top: 35%;
+}
+
+.originals{
+  position: relative;
+  border: solid;
+  border-color: black;
+  width: 50vw;
+  height: 50vw;
+  max-width:450px;
+  max-height:450px;
+
+
+}
+
+.originals:hover .imgOriginal {
+  filter:brightness(0.3);
+}
+
+.originals:hover .imgP85 {
+  filter:brightness(0.3);
+}
+
+
+.logo{
+
+ width: 70%;
+}
+
+
+.sounddesignblurb{
+  font-size: small;
 }
