--- a/Styling/main.css
+++ b/Styling/main.css
@@ -1,13 +1,74 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .background{
-      background-color: rgb(244, 244, 244);
-      background-image: url('https://zotsell.com/themes/newsinglepage/img/patterns/pattern1.png')
+  background-color: whitesmoke;
+}
+
+.mainContentLink{
+  color: rgb(124,165,83);
+  text-decoration: underline;
+}
+
+.maintitle{
+  margin-top:100px;
+  color: darkolivegreen;
+}
+
+h1{
+  font-size: 70px;
+}
+
+.headline{
+  margin-top: 25%;
+}
+
+.headline-xs{
+  color: whitesmoke;
+  margin-top: -80%;
+  opacity: 0.7;
+  background-color: darkolivegreen;
+}
+
+.title{
+  padding-left: 10px;
 }
 
 .main{
+  content: "";
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   color: rgba(228, 236, 233, 0.76);
 }
 
+.ytho{
+  margin-top: 20px
+}
+
 .main:after{
+  content: "";
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: rgba(228, 236, 233, 0.76);
+  background-image:url('../Assets/megreen.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgb(124,165,83);
+  opacity: 0.8;
+}
+
+.mainsr{
+  /* position: relative; */
+}
+
+.mainsr:after{
   content: "";
   position: absolute;
   display: block;
@@ -15,10 +76,25 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:   rgba(52, 193, 231, 0.94);
-  background-image: url('https://zotsell.com/themes/newsinglepage/img/patterns/pattern.png');
-  z-index: -1;
-  opacity: 0.1;
+  opacity: 0.8;
+}
+
+.layer{
+  position:relative;
+  z-index: 1;
+}
+
+
+.layer:before{
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgb(124,165,83); */
+  opacity: 0.4
 }
 
 a{
@@ -30,26 +106,15 @@ a:hover{
   text-decoration:none;
 }
 
+.breakpoint{
+  height: 10%;
+  background-color: transparent;
+}
 a.thumbnail:hover{
       text-decoration: none;
       font-weight: bold;
       color: white;
       background-size: 200px 200px;
-}
-
-  .tab-content{
-    position: relative;
-    min-height:250px;
-  }
-
-h2{
-    margin-bottom: 20px;
-    color: white;
-}
-
-.frontmedia{
-    padding: 10px;
-    padding-left:80px;
 }
 
 .carousel-control{
@@ -62,6 +127,23 @@ h2{
   max-width: 1024px;
 }
 
-.tab-content{
-  display:none;
+.backToTop{
+  font-size: small;
+}
+
+.backToTop a{
+  color: darkolivegreen;
+}
+
+.backToTop a:hover{
+ color: #337ab7;
+}
+
+.space{
+  height: 22%;
+}
+
+.insta{
+  height: 35% !important;
+  margin-left:-2%;
 }
